--- a/packages/export/package.json
+++ b/packages/export/package.json
@@ -14,6 +14,8 @@
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^11.2.0",
+    "pixelmatch": "^5.3.0",
+    "pngjs": "^7.0.0",
     "puppeteer": "^22.8.0"
   },
   "peerDependencies": {
